--- a/strand/iOS/Strand/Strand/DFPersonSelectionTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFPersonSelectionTableViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -18,8 +19,7 @@
                         <rect key="frame" x="16" y="9" width="35" height="35"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="35" id="iPO-pX-xut"/>
-                            <constraint firstAttribute="width" constant="35" id="z28-zr-LS8"/>
+                            <constraint firstAttribute="width" secondItem="ZAQ-Nx-9It" secondAttribute="height" multiplier="1:1" id="az4-hY-UAE"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="900" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nn3-YE-wjl">
@@ -42,12 +42,14 @@
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="ZAQ-Nx-9It" secondAttribute="bottom" constant="9" id="6gK-Ra-qsB"/>
                     <constraint firstItem="nn3-YE-wjl" firstAttribute="leading" secondItem="W0w-a5-an4" secondAttribute="leading" id="7pU-NX-58P"/>
                     <constraint firstAttribute="centerY" secondItem="yAu-Lz-d0S" secondAttribute="centerY" id="Afh-VL-pne"/>
                     <constraint firstItem="nn3-YE-wjl" firstAttribute="leading" secondItem="ZAQ-Nx-9It" secondAttribute="trailing" constant="8" id="BNR-7d-KGa"/>
                     <constraint firstAttribute="centerY" secondItem="nn3-YE-wjl" secondAttribute="centerY" priority="900" id="BcU-16-kmA"/>
                     <constraint firstItem="nn3-YE-wjl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" priority="900" constant="16" id="DfA-Jh-fVt"/>
                     <constraint firstAttribute="centerY" secondItem="ZAQ-Nx-9It" secondAttribute="centerY" id="Jcr-lD-eGi"/>
+                    <constraint firstItem="ZAQ-Nx-9It" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="9" id="LrO-6b-1PN"/>
                     <constraint firstAttribute="centerY" secondItem="W0w-a5-an4" secondAttribute="centerY" constant="-10" id="b83-Kj-uSd"/>
                     <constraint firstItem="W0w-a5-an4" firstAttribute="top" secondItem="nn3-YE-wjl" secondAttribute="bottom" id="pfN-NF-6dL"/>
                     <constraint firstAttribute="trailing" secondItem="yAu-Lz-d0S" secondAttribute="trailing" constant="8" id="r4f-OJ-QdU"/>
