--- a/strand/iOS/Strand/Strand/DFFriendProfileViewController.xib
+++ b/strand/iOS/Strand/Strand/DFFriendProfileViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFFriendProfileViewController">
             <connections>
+                <outlet property="backButton" destination="iNL-1h-xwh" id="lkP-s1-kax"/>
                 <outlet property="headerView" destination="Nc7-0m-VWp" id="1r7-Pk-KJe"/>
                 <outlet property="nameLabel" destination="QmR-gx-IVb" id="fwW-HM-SAF"/>
                 <outlet property="profilePhotoStackView" destination="vRE-Zm-eLd" id="cTL-HM-6xQ"/>
