Start of overlay view (bugs)

--- a/strand/iOS/Strand/Strand/DFSwipableButtonImageView.xib
+++ b/strand/iOS/Strand/Strand/DFSwipableButtonImageView.xib
@@ -90,7 +90,7 @@
                     <rect key="frame" x="43" y="0.0" width="515" height="515"/>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="EFR-as-Tho" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="2sY-5G-Vas"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="xKd-Cz-PRo" secondAttribute="trailing" id="AId-so-J1d"/>
